@@ -23,8 +23,12 @@ end
 ## Database Adapter
 gsub_file 'Gemfile', /gem 'sqlite3'\n/, '' unless prefer :database, 'sqlite'
 gem 'mongoid', '>= 3.0.14' if prefer :orm, 'mongoid'
-gem 'pg', '>= 0.14.1' if prefer :database, 'postgresql'
-gem 'mysql2', '>= 0.3.11' if prefer :database, 'mysql'
+unless File.open('Gemfile').lines.any?{|line| line.include?('pg')}
+  gem 'pg', '>= 0.14.1' if prefer :database, 'postgresql'
+end
+unless File.open('Gemfile').lines.any?{|line| line.include?('mysql2')}
+  gem 'mysql2', '>= 0.3.11' if prefer :database, 'mysql'
+end
 
 ## Template Engine
 if prefer :templates, 'haml'
